@@ -10,19 +10,22 @@ import static org.example.services.EmailService.printEmailList;
 public class Main {
     private static EmailService emailService = new EmailService();
     private static User currentUser;
+
     public static void main(String[] args) {
         Scanner scanner = new Scanner(System.in);
         UserService userService = new UserService();
 
 
         while (true) {
-            System.out.print("\n[L]ogin, [S]ign up: ");
+            System.out.print("\n[L]ogin, [S]ign up, [E]xit: ");
             String command = scanner.nextLine().trim().toLowerCase();
 
             if (command.equals("l") || command.equals("login")) {
                 handleLogin(scanner, userService);
             } else if (command.equals("s") || command.equals("sign up") || command.equals("signup")) {
                 handleSignup(scanner, userService);
+            } else if (command.equals("e") || command.equals("exit")) {
+                return;
             } else {
                 System.out.println("Invalid command. Try again.");
             }
@@ -42,13 +45,15 @@ public class Main {
             currentUser = user;
 
             List<Email> unreadEmails = emailService.getUnreadEmails(currentUser);
-            System.out.println("Unread Emails:\n" +
-                    "\n" +
-                    unreadEmails.size() + 1 + " unread emails:");
-            printEmailList(unreadEmails);
+            System.out.println("Unread Emails:\n");
+            if (!unreadEmails.isEmpty()) {
+                System.out.println(unreadEmails.size() + " unread emails:");
+                printEmailList(unreadEmails);
+            } else
+                System.out.println("0 unread email.");
 
             while (true) {
-                System.out.print("[S]end, [V]iew, [R]eply, [F]orward: ");
+                System.out.print("[S]end, [V]iew, [R]eply, [F]orward, [Q]uit: ");
                 String cmd = scanner.nextLine().trim().toLowerCase();
 
                 switch (cmd) {
@@ -73,42 +78,46 @@ public class Main {
 
 
                         switch (readCmd) {
-                        case "a":
-                        case "all":
-                            System.out.println("All Emails:");
-                            List<Email> allEmails = emailService.getAllReceivedEmails(currentUser);
-                            printEmailList(allEmails);
-                            break;
+                            case "a":
+                            case "all":
+                                System.out.println("All Emails:");
+                                List<Email> allEmails = emailService.getAllReceivedEmails(currentUser);
+                                printEmailList(allEmails);
+                                break;
 
-                        case "u":
-                        case "unread":
-                            System.out.println("Unread Emails:");
-                            List<Email> unreadEmail = emailService.getUnreadEmails(currentUser);
-                            printEmailList(unreadEmail);
-                            break;
+                            case "u":
+                            case "unread":
+                                System.out.println("Unread Emails:");
+                                List<Email> unreadEmail = emailService.getUnreadEmails(currentUser);
+                                if (unreadEmail.isEmpty()) {
+                                    System.out.println("No unread email");
+                                    break;
+                                }
+                                printEmailList(unreadEmail);
+                                break;
 
-                        case "s":
-                        case "sent":
-                            List<Object[]> emails = emailService.getSentEmails(currentUser);
-                            System.out.println("Sent Emails:");
-                            for (Object[] row : emails) {
-                                String emailSubject = (String) row[0];
-                                String code = (String) row[1];
-                                String emailRecipients = (String) row[2];
+                            case "s":
+                            case "sent":
+                                List<Object[]> emails = emailService.getSentEmails(currentUser);
+                                System.out.println("Sent Emails:");
+                                for (Object[] row : emails) {
+                                    String emailSubject = (String) row[0];
+                                    String code = (String) row[1];
+                                    String emailRecipients = (String) row[2];
 
-                                System.out.println("+ " + emailRecipients + " - " + emailSubject + " (" + code + ")");
-                            }
-                            break;
+                                    System.out.println("+ " + emailRecipients + " - " + emailSubject + " (" + code + ")");
+                                }
+                                break;
 
-                        case "c":
-                        case "code":
-                            System.out.println("Code:");
-                            String code = scanner.nextLine().trim().toLowerCase();
-                            emailService.readEmailByCode(currentUser, code);
-                            break;
+                            case "c":
+                            case "code":
+                                System.out.println("Code:");
+                                String code = scanner.nextLine().trim().toLowerCase();
+                                emailService.readEmailByCode(currentUser, code);
+                                break;
 
                         }
-                            break;
+                        break;
 
                     case "r":
                     case "reply":
@@ -128,10 +137,15 @@ public class Main {
                         String recipientLine = scanner.nextLine().trim();
 
                         String[] forwardRecipients = recipientLine.split("[,\\s]+");
-                        List<String> recipientEmails = List.of(forwardRecipients);
+                        List<String> recipientEmails = new ArrayList<>(Arrays.asList(forwardRecipients));
 
                         emailService.forwardEmail(currentUser, originalCode, recipientEmails);
                         break;
+
+                    case "q":
+                    case "quit":
+                        System.out.println("Logged out.");
+                        return;
 
                     default:
                         System.out.println("Invalid command.");
